feat: 각 주문 별 상품 합산하는 메소드 구현